# fruitymesh_grvc

./: .gitignore  setup.sh
download/nrf-connect-linux-x64/: libjlinkarm_nrf51_nrfjprogdll.so.9  libjlinkarm_nrf51_nrfjprogdll.so.9.2.1  libjlinkarm_nrf52_nrfjprogdll.so.9  libjlinkarm_nrf52_nrfjprogdll.so.9.2.1  libnrfjprogdll.so.9  libnrfjprogdll.so.9.2.1
projects/fruitymesh/: Makefile
projects/fruitymesh/config/: Config.h
projects/fruitymesh/inc/: CustomModule.h
projects/fruitymesh/src/: Main.cpp
projects/fruitymesh/src/mesh/: Node.cpp
projects/fruitymesh/src/modules/: CustomModule.cpp  DebugModule.cpp  EnrollmentModule.cpp  IoModule.cpp  Module.cpp  ScanningModule.cpp  StatusReporterModule.cpp
projects/fruitymesh/src/test/: Testing.cpp
projects/fruitymesh/src/utility/: NewStorage.cpp
projects/fruitymesh/src_examples/: PingModule.cpp  TemplateModule.cpp
projects/fruitymesh_andres/: makefile
projects/fruitymesh_andres/src/: Main.cpp
projects/serialBtTest/: CMakeLists.txt
projects/serialBtTest/src/: main.cpp
pythonScripts/: LogParser.py  SerialReader.py  arrayPlotter.py
sdk/: ehal_latest  nrf52_sdk_latest
sdk/ehal_2015_09_08/ARM/: CMSIS
sdk/ehal_2015_09_08/ARM/Nordic/nRF51/: nrf51_sdk
sdk/nrf_sdk_9_0/components/softdevice/s130/headers/: nrf_svc.h
tools/: jlink
